fix: remove high version JDK method usage
- Test scope fixes wrong method usage;
- Add example file;